Add voltage levels to the request when geting equipment ids. (#192)
* Change the request type to get elements ids.
--------
Signed-off-by: AAJELLAL <ali.ajellalod@gmail.com>
Co-authored-by: maissa SOUISSI <maissa.souissi@rte-france.com>